--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.3"
+    "@astrojs/svelte": "^7.2.0",
+    "@unocss/astro": "^66.5.3",
+    "astro": "^5.14.3",
+    "graphql-request": "^7.2.0",
+    "svelte": "^5.39.11",
+    "unocss": "^66.5.3"
   }
 }
