Add hacktoberfest keyword to package.json

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "open-source",
     "contribution",
     "pull-requests",
+    "hacktoberfest",
     "astro",
     "svelte",
     "github-api",
