Fix CodeRabbit configuration parsing error

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -34,9 +34,7 @@ chat:
 knowledge_base:
   learnings:
     scope: global
-  issues: false
-  pull_requests: false
-  jira_issues: false
+  opt_out: false
 
 instructions: |
   ## Project Context
