Add IMPLEMENTATION_GUIDE.md to gitignore
- Added IMPLEMENTATION_GUIDE.md to gitignore as a personal workflow file
- Prevents committing implementation tracking documents

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ coverage/
 # Local development settings
 .vscode/settings.json
 .claude/
+
+# Implementation guides (personal workflow files)
+IMPLEMENTATION_GUIDE.md
