--- a/package.json
+++ b/package.json
@@ -29,7 +29,15 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "vitest",
+    "test:unit": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:all": "npm run test:unit && npm run test:e2e"
   },
   "dependencies": {
     "@astrojs/svelte": "^7.2.0",
@@ -42,5 +50,12 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.56.1",
+    "@vitest/ui": "^4.0.9",
+    "happy-dom": "^20.0.10",
+    "playwright": "^1.56.1",
+    "vitest": "^4.0.9"
   }
 }
