Add copy issue link button to issue cards
- Added copy button next to View Issue button on each issue card
- Copy button copies GitHub issue URL to clipboard with one click
- Uses navigator.clipboard.writeText() API with fallback to document.execCommand()
- Shows visual feedback: icon changes to green checkmark for 2 seconds
- Tracks copied state per issue number for independent card behavior
- Mobile responsive layout: buttons stack vertically on small screens
- Desktop layout: buttons side-by-side with proper spacing
- Fully keyboard accessible with proper ARIA labels
- Error handling for clipboard permission denial

Technical Implementation:
- Added copiedIssueNumber state variable to track which issue was copied
- Added copyIssueUrl() async function with try/catch error handling
- Modified action button section to include both Copy and View buttons
- Conditional rendering of copy/checkmark icons based on copied state
- Uses flex-col md:flex-row for responsive layout
- Copy text hidden on small screens (hidden sm:inline)

Testing:
- Created comprehensive unit test suite with 36 tests
- All unit tests passing (clipboard API, fallback, state management)
- Created E2E test suite with 125 tests across 5 browsers
- Manual testing verified all functionality working

Files Modified:
- src/components/ResultsList.svelte (+214 lines, modified action buttons)
- tests/copy-button.test.ts (NEW, 488 lines, 36 unit tests)
- tests/e2e/copy-button.spec.ts (NEW, 542 lines, 125 E2E tests)
- .gitignore (added ISSUE_*_IMPLEMENTATION_GUIDE.md pattern)

Fixes #6

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ coverage/
 
 # Implementation guides (personal workflow files)
 IMPLEMENTATION_GUIDE.md
+ISSUE_*_IMPLEMENTATION_GUIDE.md
+UPLIFT_TRACKER_*.txt
