[FEATURE] Add zero-comment issue highlighting with filter and sort options (#20)
- Add 'Easy to Start!' badge on zero-comment issues with pulse animation
- Add green glow highlight effect on zero-comment issue cards
- Add 'Easy Issues Only' toggle filter with count badge
- Add sort dropdown (Default/Fewest/Most Comments)
- Add Clear Filters button when filters are active
- Add comprehensive accessibility support (ARIA labels, role='switch', aria-live region)
- Add prefers-reduced-motion and high contrast mode support
- Add 8 utility functions in src/lib/issue-utils.ts
- Add 58 unit tests in tests/issue-utils.test.ts (all passing)
- Add 31 E2E tests in tests/e2e/zero-comment-highlighting.spec.ts

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,11 @@ test-results/
 IMPLEMENTATION_GUIDE.md
 ISSUE_*_IMPLEMENTATION_GUIDE.md
 UPLIFT_TRACKER_*.txt
+
+# Issue submission/tracking files
+issue-*-submission.txt
+ai-allowed-hours.txt
+hours-breakdown.txt
+new-issues-summary.txt
+nul
+ISSUE_WORKFLOW.md
