[FEATURE] Add comprehensive empty state system with illustrations and suggestions (#30) (#42)
* [FEATURE] Add comprehensive empty state system with illustrations and suggestions (#30)

Implemented a complete empty state system for the IssueFlow application that provides
context-aware feedback and visual guidance for users in various application states.

Features:
- EmptyState.svelte reusable component with 5 variants (initial, no-results, error,
  rate-limited, success)
- Custom SVG illustrations matching the sketch-style design aesthetic
- Animated floating illustrations with CSS animations
- WCAG 2.1 accessible with ARIA live regions for screen reader announcements
- Responsive design (mobile-first) with tablet and desktop breakpoints
- prefers-reduced-motion support for accessibility
- Pure utility functions extracted to empty-state-utils.ts for testability

Implementation:
- src/components/shared/EmptyState.svelte: Main component with inline SVG illustrations
- src/lib/empty-state-utils.ts: Type definitions, configurations, detection functions
- Integration into ResultsContainer.svelte with proper state detection
- 80 unit tests covering all utility functions
- 25 E2E tests for browser-based validation

Closes #30

* fix: Address CodeRabbit review feedback

- Change on:click to onclick for Svelte 5 consistency (EmptyState.svelte)
- Fix overly broad 'exceeded' pattern to prevent false positives (empty-state-utils.ts)
- Replace waitForTimeout with deterministic waits in E2E tests
- Add false positive prevention test for rate limit detection
- Remove duplicate spinner from search button (SearchForm.svelte)

* refactor(empty-state): Address CodeRabbit review suggestions

- Fix 403 pattern to avoid false positives: now requires rate/limit/quota
  context (e.g., "403: Rate limit exceeded") instead of matching 403 alone
- Derive getAllVariants() from EMPTY_STATE_CONFIGS keys for consistency
- Fix fragile keyboard navigation test: directly focus specific elements
- Fix 

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,6 @@ pnpm-debug.log*
 
 # Editor directories and files
 .vscode/
-.vscode/*
-!.vscode/extensions.json
 .idea/
 *.suo
 *.ntvs*
@@ -53,19 +51,21 @@ test-results/
 *.temp
 .cache/
 
-# Local development settings
-.vscode/settings.json
+# Claude/AI workflow files
 .claude/
-
-# Implementation guides (personal workflow files)
 IMPLEMENTATION_GUIDE.md
 ISSUE_*_IMPLEMENTATION_GUIDE.md
+ISSUE_*_IMPLEMENTATION_PLAN.md
+ISSUE_*_COMPLETION.txt
+ISSUE_*_UPLIFT_STUDY.txt
 UPLIFT_TRACKER_*.txt
 
-# Issue submission/tracking files
+# Issue tracking files
 issue-*-submission.txt
 ai-allowed-hours.txt
 hours-breakdown.txt
 new-issues-summary.txt
-nul
 ISSUE_WORKFLOW.md
+
+# Windows null file
+nul
