[CONFIG] Add ESLint and Prettier configuration for code quality
- Added ESLint flat config with TypeScript, Svelte, and Astro support
- Added Prettier configuration matching .editorconfig (2 spaces, LF)
- Added npm scripts: lint, lint:fix, format, format:check
- Updated CI workflow with ESLint and Prettier checks
- Fixed code issues found by linter (regex escapes, each block keys)
- Formatted entire codebase with Prettier (LF line endings)

Closes #49

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -22,11 +22,11 @@ reviews:
     prettier:
       enabled: false
   path_filters:
-    - "!**/*.lock"
-    - "!**/*.svg"
-    - "!**/dist/**"
-    - "!**/node_modules/**"
-    - "!**/.astro/**"
+    - '!**/*.lock'
+    - '!**/*.svg'
+    - '!**/dist/**'
+    - '!**/node_modules/**'
+    - '!**/.astro/**'
 
 chat:
   auto_reply: true
