[CHORE] Rebrand from IssueFlow to IssueVista
- Update package.json name, homepage, repository URLs
- Update all source code references
- Add localStorage migration for existing user data
- Update documentation, tests, and config files
- Update Cloudflare CORS whitelist
- Update SEO files (sitemap, robots.txt, og-image)

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -1,4 +1,4 @@
-# CodeRabbit AI Configuration for IssueFlow
+# CodeRabbit AI Configuration for IssueVista
 # https://docs.coderabbit.ai/guides/configure-coderabbit
 
 language: en-US
@@ -31,7 +31,7 @@ reviews:
     - path: '**/*'
       instructions: |
         ## Project Context
-        IssueFlow is a web application built with Astro 5.x, Svelte 5, and UnoCSS that helps developers find unassigned GitHub issues without pull requests.
+        IssueVista is a web application built with Astro 5.x, Svelte 5, and UnoCSS that helps developers find unassigned GitHub issues without pull requests.
 
         ## Review Focus
         - TypeScript type safety
