--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # To enable GitHub OAuth Device Flow:
 # 1. Go to https://github.com/settings/applications/new
 # 2. Fill in the application details:
-#    - Application name: IssueFlow
+#    - Application name: IssueVista
 #    - Homepage URL: http://localhost:4321 (or your production URL)
 #    - Application description: Find unassigned GitHub issues without PRs
 #    - Authorization callback URL: Not needed for device flow
