--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
-# Funding platforms for IssueFlow
+# Funding platforms for IssueVista
 # These are supported funding model platforms
 
 github: [ascender1729]
